k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-chatbot-service
  namespace: mindx-chatqa
spec:
  selector:
    app: ai-chatbot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
  type: ClusterIP
